# codfish

./: .gitignore  LICENSE  NOTICE  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_LICENSES.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
.github/: FUNDING.yml
.github/workflows/: build-cuda-sidecar.yml  build-ffmpeg.yml  release-app.yml  release-sidecar.yml
docs/: CNAME  index.html  testing-plan-0.6.0.md
scripts/: check-no-fffd.mjs  collect-npm-licenses.js
sidecar/: build.py  build_ffmpeg.sh  collect_licenses.py  fetch_ffmpeg.py  make_manifest.py  release-cuda.py  requirements-cuda.txt  requirements.txt  transcribe.py
src/: App.tsx  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  about.hbs  about.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: THIRD_PARTY_LICENSES_NPM.txt  THIRD_PARTY_LICENSES_RUST.txt  json.js  srt.js
src-tauri/resources/export_formats/: json.cff  srt.cff  txt.cff  txt.js  vtt.cff  vtt.js
src-tauri/resources/profiles/: bbc.cfp  default.cfp  default.ini  netflix.cfp
src-tauri/src/: bug_report.rs  daemon.rs  lib.rs  main.rs  sidecar.rs
src-tauri/src/transcription/: mod.rs
src/components/: AboutModal.tsx  ActionMenuButton.tsx  BatchBlocker.tsx  BugReportModal.tsx  CaptionNumber.tsx  ContextMenu.tsx  ErrorModal.tsx  FormatBuilder.tsx  FormatManager.tsx  HelpModal.tsx  MediaSettings.tsx  NoticeModal.tsx  ProfileEditor.tsx  ProfileManager.tsx  RecoveryPrompt.tsx  SelectButton.tsx  SidecarSetup.tsx  Splash.tsx  Tooltip.tsx  UnsavedChanges.tsx  UpdateNotice.tsx  WarningBadge.tsx  titlebarMenu.ts
src/components/__tests__/: ActionMenuButton.test.tsx  BatchBlocker.test.tsx  FormatManager.test.tsx  NoticeModal.test.tsx  SelectButton.test.tsx  gateForUpdate.test.ts
src/components/layout/: CaptionPanel.tsx  PanelResizeHandle.tsx  ProjectPanel.tsx  Timeline.tsx  TitleBar.tsx  TransportBar.tsx  VideoPanel.tsx
src/components/layout/__tests__/: TitleBar.test.tsx  panelResize.test.ts
src/lib/: actions.ts  batch.ts  bins.ts  captionSearch.ts  clipView.ts  features.ts  gpu.ts  hash.ts  mediaExts.ts  mediaSort.ts  naming.ts  peaks-cache.ts  playhead.ts  recent.ts  recovery.ts  time.ts  waveform.ts
src/lib/__tests__/: actions.test.ts  batch.test.ts  bins.test.ts  captionSearch.test.ts  clipView.test.ts  hash.test.ts  mediaSort.test.ts  playhead.test.ts  time.test.ts  waveform.test.ts
src/lib/export/: autocomplete.ts  builder.ts  index.ts  validation.ts
src/lib/export/__tests__/: autocomplete.test.ts  builder.test.ts  bulk.test.ts  integration.test.ts  validation.test.ts
src/lib/pipeline/: cleanup.ts  index.ts  linebreak.ts  merge.ts  segment.ts  timing.ts  types.ts  validate.ts
src/lib/pipeline/__tests__/: cleanup.test.ts  helpers.ts  integration.test.ts  linebreak.test.ts  (+3 more)
src/lib/profiles/: defaults.ts  index.ts
src/lib/project/: index.ts
src/lib/transcription/: index.ts
src/store/: app.ts  theme.ts
src/store/__tests__/: app.test.ts
src/styles/: components.css  global.css
src/types/: profile.ts  project.ts
(+5 files in other folders)
