[package]
name = "codfish"
version = "0.5.8"
description = "Caption generation and editing for media producers"
authors = ["Jared Bohlken"]
edition = "2021"

[lib]
name = "codfish_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
sha2 = "0.10"
futures-util = "0.3"
chrono = "0.4"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
