[package]
name = "codfish"
version = "0.6.0"
description = "Caption generation and editing for media producers"
authors = ["Jared Bohlken"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "codfish_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "process", "sync", "macros"] }
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
sha2 = "0.10"
futures-util = "0.3"
chrono = "0.4"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Desktop-only: prevent a second Codfish launch from spawning a duplicate
# process. A second `.cod` double-click instead forwards its argv to the
# running instance, which drains it via the same LaunchPaths queue used by
# first-launch file association.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
